--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "posthog-js": "^1.285.1",
     "posthog-node": "^5.11.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
