--- a/package.json
+++ b/package.json
@@ -19,27 +19,31 @@
     "lucide-react": "^0.552.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.3",
-    "next": "16.0.1",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "posthog-js": "^1.285.1",
     "posthog-node": "^5.11.0",
-    "react": "19.2.0",
+    "react": "19.2.3",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.2.0",
+    "react-dom": "19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "16.1.1",
     "shadcn": "^3.5.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
